# simplex-engine

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: simplex-engine.mdc  voxel-world.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: MINECRAFT_DEVELOPMENT_PLAN.md  README.md  api_reference.md  architecture.md  config_options.md  design-and-roadmap.md  event_priorities_propagation.md  event_system_advanced.md  for-customers.md  for-developers.md  input_system_guide.md  input_touch_gamepad.md  lighting_postprocessing.md  material_shader_system.md  physics_events_ecs_scripting.md  ping_pong_example.md  scene_graph_hierarchical_instancing.md
docs/advanced/: README.md  resource_analytics.md
docs/api/: README.md  complete.md  filter.md  search.md  versions.md
docs/architect/: README.md  architecture.md  design_rules.md
docs/core-concepts/: README.md
docs/todo/: mvp.md  (+5 more)
examples/: __init__.py  config.toml  demo_scene.py  full_integration_demo.py  physics_demo.py  run_example.py
scripts/: check_docs_links.py
simplex/: __init__.py  config.py  engine.py
tests/: __init__.py  test_audio.py  test_chunk_manager.py  test_chunk_streaming.py  test_edge_cases.py  test_input.py  test_integration.py  test_mcp_tools.py  test_performance.py  test_ping_pong_ai.py  test_player_movement.py  test_renderer.py  test_resource_manager.py  test_scheduler.py  test_script_manager.py  test_vbo_and_renderer_upload.py  test_voxel_collision.py
(+407 files in other folders)
