[project]
name = "simplex-engine"
version = "0.0.1"
description = "Modern Python game engine for voxel-based worlds with ECS architecture, designed for building Minecraft-like games with infinite procedural worlds and multiplayer support."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging>=0.4.9.6",
    "pybullet>=3.2.7",
    "pygame>=2.6.1",
    "pyopengl>=3.1.9",
    "toml>=0.10.2",
]
